# foundry-pptx-agent

./: .env.deployment.example  .env.example  .env.mcp.deployment.example  .gitignore  Dockerfile  Dockerfile.mcp  README.md  agent.yaml  azure.yaml  docker-compose.yml  pyproject.toml
.azure/: deployment-plan.md
.foundry/: agent-metadata.yaml
docs/: AGENT_INSTRUCTIONS_EXAMPLES.md  INSTALL_DEPLOY_AND_AGENT_USAGE.md  INSTALL_DEPLOY_AS_MCP.md  PRODUCTION_SECURITY_TALK_TRACK.md  azure-foundry-deployment-runbook.md  foundry-integration.md
examples/: sample_deck_plan.json
scripts/: create_sample_template.py  import_template.py
src/foundry_pptx_agent/: __init__.py  app.py  mcp_server.py  planner.py  pptx_service.py  schemas.py  settings.py  template_onboarding.py
templates/: customer-master-template.contract.json  sample-board-template.contract.json  sample-board-template.pptx
tests/: test_pptx_service.py
