[project]
name = "foundry-pptx-agent"
version = "0.1.0"
description = "Foundry-style presentation agent and deterministic PowerPoint generator for customer templates."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "python-multipart>=0.0.12",
    "python-pptx>=1.0.2",
    "pydantic>=2.8.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
]

[project.scripts]
foundry-pptx-agent = "foundry_pptx_agent.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
